This file records noteworthy changes.

(0.9)
  * Ported to ImageMagick 5.0.
  * BLOB sizes are now specified using size_t type.
  * Rotate() no longer accepts sharpen or crop options.
  * Shear() No longer accepts a crop option.
  * The condense, uncondense, and condensed methods have been removed
    since ImageMagick 5.0 no longer uses run-length encoding.

(0.8.9)
  * Blob reference counting was totally broken, leading to a memory
    leak if it was used.  Fixed by starting reference count from one
    rather than zero.

(0.8.8)
  * Fixed a Image constructor bug when constructing from a Blob

(0.8.7)
  * Bugfix: condensed() was returning wrong state.

(0.8.6)
  * Color is now based on ImageMagick's RunlengthPacket structure (via a
    pointer) so that it may eventually be used to represent an image
    pixel.  This is currently a work in progress.

(0.8.5)
  * Headers are now installed under prefix/include/Magick++ on Unix
    systems with the exception that Magick++.h is installed under
    prefix/include as it was before.  Programs which include Magick++.h
    (the documented approach) should not be impacted.
  * Image constructors to construct an image from a BLOB.
  * Image read and write methods to decode and encode images stored in a
    BLOB.  This allows reading/writing image "files" from/to memory rather
    than a traditional file.

(0.8.4)
  * New mapImages algorithm maps a sequence of images to the colormap of
    a provided image.
  * New quantizeImages algorithm computes and applies a common colormap
    to a sequence of images.

(0.8.3)
  * Ported to ImageMagick 4.2.6.
  * Blob supports default constructor.
  * New Blob method updateNoCopy() to support efficient initialization by
    derived class.

(0.8.2)
  * Uses libtool 1.3 to build library under Unix and Cygwin (static lib only).
  * Added Blob class to support supplying formatted binary data to methods.
  * Added support for setting ICC and IPTC profiles from a binary BLOB.